[tool.poetry]
package-mode = false
name = "bot-helper"
version = "0.1.0"
description = ""
authors = ["Roman Stas <romastas1996@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.3"
black = "^24.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
